--- a/zadatak1.html
+++ b/zadatak1.html
@@ -4,7 +4,7 @@
 <head>
 <title>Zadatak sa CSS-om i lista</title>
 <style type="text/css">
-body {background-color: lightblue;}
+body {background-color: pink;}
  h1 {color:green; text-align:center;text-transform: uppercase;}
  h2 {color:red; text-decoration:wavy; text-decoration-line:underline; letter-spacing:2px;}
  h3 {color:blue; text-decoration-style:solid}
