--- a/zadatak3.html
+++ b/zadatak3.html
@@ -10,9 +10,9 @@ a:visited {color:#ff3300;}
 a:activ {color:red;}
 a:hover {color:pink;}
 
-body {background-color: #d9d9d9;}
+body {background-color: lightblue;}
 
-#reg {color:#0000ff; font-size:20px; background-color:
+#reg {color:#0000ff; font-size:40px; background-color:
 
 	 #66ffcc;}
 	 #reg1 {background-color: #33ccff; color:#0000ff}
