--- a/zadatak2.html
+++ b/zadatak2.html
@@ -6,7 +6,7 @@
 </title>
 <style type="text/css">
 
-body {background-color: #d9d9d9;}
+body {background-color: #99ffcc;}
 
  #r {font-size:50px; color:red; font-style:bold;}
 
