--- a/zadatak3.html
+++ b/zadatak3.html
@@ -10,7 +10,7 @@ a:visited {color:#ff3300;}
 a:activ {color:red;}
 a:hover {color:pink;}
 
-body {background-color: lightblue;}
+body {background-color: #99ffcc;}
 
 #reg {color:#0000ff; font-size:20px; background-color:
 
