--- a/zadatak4.html
+++ b/zadatak4.html
@@ -10,7 +10,7 @@
 </title>
 
 <style type="text/css">
-body {background-color: #d9d9d9;}
+body {background-color: #99ffcc;}
 a:link {color:green;}
 a:visited {color:#ff3300;}
 a:activ {color:red}
