--- a/zadatak5.html
+++ b/zadatak5.html
@@ -5,7 +5,7 @@
 <title> Zadatak5</title>
 <style type="text/css">
 
-	body {background-color: #d9d9d9;}
+	body {background-color: #99ffcc;}
 	h1 { color: red; background-color:#ffb3b3 text-align:center;
 	}
 	p { color:#ff4dd2; text-align:left; font-family: Times New Roman,Arial; font-size:20px; text-decoration:underline;
