--- a/zadatak1.html
+++ b/zadatak1.html
@@ -13,7 +13,7 @@ body {background-color:#99ffcc;}
 	p.drugastrofa {text-align:right; color:red; text-decoration-style:dashed; margin-left:20;}
 	.trecastrofa {text-decoration-line:underline; text-shadow:2px 2px #ff0000; }
 	
-#gradovi {color:green; text-align:center;font-size:40px;}
+#gradovi {color:green; text-align:left;font-size:40px;}
 
 ul.a {list-style-type: lower-alpha; background: #ff9999; font-style:italic;}
 ul.b {list-style-type:upper-roman;background-color:yellow;}
@@ -23,7 +23,9 @@ a:link {color:green;}
 a:visited {color:#ff3300;}
 a:activ {color:red;}
 a:hover {color:pink;}
-
+#e {font-weight:bold;}
+#am {font-weight:bold;}
+#az {font-weight:bold;}
 </style>
 
 
@@ -35,7 +37,6 @@ a:hover {color:pink;}
 <a name="pocetak"></a> <br><br>
 <a href="zadatak4.html">Predji predji na cetvrtu stranu</a><br><br>
 <a href="zadatak5.html">Predji predji na petu stranu</a><br><br>
-
 
 <a href="#gradovi">Klikni na listu gradova</a>
 
@@ -87,32 +88,50 @@ And When I Write Him He Better, Get It On Time.*</div>
 
 <h3 id="gradovi">Gradovi</h3>
 
+<table border="1">
+
+	<tr>
+	<td id="e">Evropski gradovi:</td>
+	
+		<td>
+			<ul class="a"> 
+				<li>Beograd</li>
+				<li>Bec</li> 
+				<li>Pariz</li>
+			</ul>
+		</td>
+	</tr>
+	
+	<tr>
+
+		<td id="am">Americki gradovi:</td>	
+		<td>
+			<ul class="b">
+
+				<li>Njujork</li>
+				<li>Los Andjeles</li>
+				<li>Holivud</li>
+			</ul>
+		</td>	
+			
+	</tr>
+
+	<tr>
+		<td id="az">Azijski gradovi:</td>
+		<td>
+			<ol>
+				<li>Pariz</li>
+				<li>London</li>
+				<li>Njujork</li>
+				<li>Moskva</li>
+			</ol>
+
+		</td>
 
 
-	<ul class="a"> 
-	<li>Beograd</li>
-	<li>Novi Sad</li>
-	<li>Subotica</li>
+	</tr>
+</table>
 
-	</ul>
-
-
-
-
-<ul class="b">
-
-	<li>Rim</li>
-	<li>Venecija</li>
-	<li>Sofija</li>
-</ul>
-
-
-
-<ol><li>Pariz</li>
-	<li>London</li>
-	<li>Njujork</li>
-	<li>Moskva</li>
-</ol>
 	
 <a href="#pocetak"><strong>Klikni na pocetak strane</strong></a>
 
