--- a/zadatak1.html
+++ b/zadatak1.html
@@ -15,7 +15,7 @@ body {background-color:#99ffcc;}
 	
 #gradovi {color:green; text-align:left;font-size:40px;}
 
-ul.a {list-style-type: lower-alpha; background: #ff9999; font-style:italic;}
+ul.a {list-style-type:circle; background: #ff9999; font-style:italic;}
 ul.b {list-style-type:upper-roman;background-color:yellow;}
 ol {list-style:square;}
 
@@ -28,15 +28,15 @@ a:hover {color:pink;}
 #az {font-weight:bold;}
 </style>
 
-
+<meta charset="utf-8">
 </head>
 
 <body>
-<a href="zadatak2.html">Predji na drugu stranu</a><br><br>
-<a href="zadatak3.html">Predji na trecu stranu</a>
+<a href="zadatak2.html">Pređi na drugu stranu</a><br><br>
+<a href="zadatak3.html">Pređi na treću stranu</a>
 <a name="pocetak"></a> <br><br>
-<a href="zadatak4.html">Predji predji na cetvrtu stranu</a><br><br>
-<a href="zadatak5.html">Predji predji na petu stranu</a><br><br>
+<a href="zadatak4.html">Pređi na četvrtu stranu</a><br><br>
+<a href="zadatak5.html">Pređi na petu stranu</a><br><br>
 
 <a href="#gradovi">Klikni na listu gradova</a>
 
