--- a/zadatak2.html
+++ b/zadatak2.html
@@ -33,14 +33,14 @@ a:hover {color:pink;}
 
 
 </style>
-
+<meta charset="utf-8">
 </head>
 
 <body>
-<a href="zadatak1.html">Predji na prvu stranu</a><br><br>
-<a href="zadatak3.html">Predji na trecu stranu</a><br><br>
-<a href="zadatak4.html">Predji na cetvrtu stranu</a><br><br>
- <a href="zadatak5.html">Predji na petu stranu</a><br>
+<a href="zadatak1.html">Pređi na prvu stranu</a><br><br>
+<a href="zadatak3.html">Pređi na treću stranu</a><br><br>
+<a href="zadatak4.html">Pređi na četvrtu stranu</a><br><br>
+ <a href="zadatak5.html">Pređi na petu stranu</a><br>
 <table>
 
 <caption id="r">Raspored nastave</caption>
@@ -50,13 +50,13 @@ a:hover {color:pink;}
 	 <th>Ponedeljak</th>
 	 <th>Utorak</th>
 	<th>Sreda</th>
-	<th>Cetvrtak</th>
+	<th>Četvrtak</th>
 	<th>Petak</th>
 
 </thead>
 	<tbody>
 	<tr>
-		<th>Prvi cas</th>
+		<th>Prvi čas</th>
 	
 		<td>Matematika</td>
 		<td>Istorija</td>
@@ -68,8 +68,8 @@ a:hover {color:pink;}
 	
 	<tr>
 	
-		<th>Drugi cas</th>
-		<td>Fizicko</td>
+		<th>Drugi čas</th>
+		<td>Fizičko</td>
 		<td>Njemacki</td>
 		<td>Hemija</td>
 		<td>Fizika</td>
@@ -78,7 +78,7 @@ a:hover {color:pink;}
 	</tr>
 	
 	<tr>
-		<th>Treci cas</th>
+		<th>Treći čas</th>
 		
 		<td>Biologija</td>
 		<td>Fizika</td>
