--- a/zadatak4.html
+++ b/zadatak4.html
@@ -20,13 +20,14 @@ a:hover {color:pink}
 
 
 </style>
+<meta charset="utf-8">
 </head>
 
-<a href="zadatak1.html">Predji na prvu stranu</a>
+<a href="zadatak1.html">Pređi na prvu stranu</a>
  <br><br>
- <a href="zadatak2.html">Predji na drugu stranu</a><br><br>
- <a href="zadatak3.html">Predji na trecu stranu</a><br><br>
-  <a href="zadatak5.html">Predji na petu stranu</a>
+ <a href="zadatak2.html">Pređi na drugu stranu</a><br><br>
+ <a href="zadatak3.html">Pređi na trecu stranu</a><br><br>
+  <a href="zadatak5.html">Pređi na petu stranu</a>
 <div>
 
 			<iframe src="http://www.mondo.rs" width="500px" height="500px" name="mondo1"></iframe>
@@ -36,10 +37,10 @@ a:hover {color:pink}
 
 	<div>
 	<div>
-<a href="http://www.blic.rs" target="politika1"> Udji na Blic</a></div>
-<div><a href="http://www.telegraf.rs" target="mondo1">Udji na Telegraf</a></div>
-<div> <a href="http://www.mondo.rs" target="mondo1">Udji na Mondo</a></div>
-<div> <a href="http://www.politika.rs" target="politika1">Udji na Politiku</a>
+<a href="http://www.blic.rs" target="politika1"> Uđi na Blic</a></div>
+<div><a href="http://www.telegraf.rs" target="mondo1">Uđi na Telegraf</a></div>
+<div> <a href="http://www.mondo.rs" target="mondo1">Uđi na Mondo</a></div>
+<div> <a href="http://www.politika.rs" target="politika1">Uđi na Politiku</a>
 </div>
 
 	</div>
