--- a/zadatak5.html
+++ b/zadatak5.html
@@ -30,11 +30,11 @@
 </head>
 
 <body>
-<a href="zadatak1.html">Predji na prvu stranu</a>
+<a href="zadatak1.html">Pređi na prvu stranu</a>
  <br><br>
- <a href="zadatak2.html">Predji na drugu stranu</a><br><br>
- <a href="zadatak3.html">Predji na trecu stranu</a><br><br>
-<a href="zadatak4.html">Predji na cetvrtu stranu</a>
+ <a href="zadatak2.html">Pređi na drugu stranu</a><br><br>
+ <a href="zadatak3.html">Pređi na trecu stranu</a><br><br>
+<a href="zadatak4.html">Pređi na cetvrtu stranu</a>
 <h1>Amazing grace!</h1>
 <p>Amazing grace! How sweet the sound
 That saved a wretch like me
